// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A custom Divider 1`] = `
.c0 {
  border: none;
  background-color: turquoise;
  height: 20px;
  width: 100%;
}

<hr
  className="c0"
  size="20px"
/>
`;

exports[`Default Divider 1`] = `
.c0 {
  border: none;
  background-color: #C1C6CC;
  height: 1px;
  width: 100%;
}

<hr
  className="c0"
  size="1px"
/>
`;

exports[`Divider with a variant 1`] = `
.c0 {
  border: none;
  background-color: #707781;
  height: 1px;
  width: 100%;
}

<hr
  className="c0"
  size="1px"
/>
`;
